--- a/index.html
+++ b/index.html
@@ -21,9 +21,8 @@
             </form>
         </div>
     </section>
-    <section class="pizza-container-render">
+    <section class="pizza-container-renders">
         <div id="pizza-container">
-            <small></small>
         </div>
     </section>
     <script src="./main.js"></script>
